maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
    while (!estSurBiscuit) {
    	var a = random(3)
    	a match {
    		case 0 => avance
    		case 1 => droite
    		case 2 => gauche
    	}
    }
}
